--- a/css/css.css
+++ b/css/css.css
@@ -8,6 +8,11 @@
     src: url('/fonts/Roboto-Regular.ttf') format('truetype');
 }
 
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
 body {
     background-color: #0B2E59;
     font-family: "Montserrat";
@@ -41,6 +46,8 @@ body {
     margin-top: 26px;
     width: 277.91px;
     height: 89.84px;
+    left: 581px;
+    top: 366px;
 }
 
 .container .btn-play, .btn-simulate {
@@ -57,9 +64,44 @@ body {
     font-family: "Roboto";
     font-style: normal;
     border: none;
+    
+}
+
+.btn {
+    padding: 15px 20px;
+    background-color: #EBB652;
+    color: #FFF;
+    border: none;
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 36px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     cursor: pointer;
+}
+
+.text-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-btn {
+    margin-right: 15px;
+    height: 40px;
+}
+
+p {
+    margin: 0px;
+}
+
+.btn:hover {
+    background-color: #F5DAA9;
+}
+
+.btn:active {
+    background-color: #EBB652;
 }
 
 .container .btn-simulate {
@@ -72,4 +114,95 @@ body {
 
 .container .btn-play:active, .btn-simulate:active {
     background-color: #EBB652;
+}
+
+.main-container {
+    font-family: "Montserrat";
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
+
+.points-table {
+    background: #E1E1E1;
+    height: auto;
+    width: 400px;
+    border-radius: 20px;
+    padding: 37px;
+    margin-bottom: 20px;
+}
+
+.dice-holder {
+    background: #E1E1E1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 450px;
+    width: 75px;
+    top: 37px;
+    border-radius: 20px;
+    padding: 34px;  
+    margin-bottom: 20px; 
+}
+
+.game {    
+    display: flex;
+    justify-content: space-between;
+}
+
+.points-container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 10px;
+    align-content: center;
+}
+
+label {
+    height: 29px;
+    width: 80px;
+    margin-right: 15px;
+    top: 88px;
+    align-self: center;
+}
+
+.score-block {
+    background: #B6B6B6;
+    height: 56px;
+    width: 56px;
+    top: 74px;
+    border-radius: 10px;
+}
+
+.die-holder {
+    background: #B6B6B6;
+    height: 56px;
+    width: 56px;
+    left: 0px;
+    top: 0px;
+    border-radius: 10px;
+}
+
+.block {
+    display: flex;
+    justify-content: space-around;
+}
+
+.points-total {
+    display: flex;
+    flex-direction: wrap;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.points-total .left-container, .right-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.solid {
+    border-top: 1px solid #B6B6B6;
+    border-radius: 1px;
 }
