Generacion de dados

--- a/css/css.css
+++ b/css/css.css
@@ -80,6 +80,10 @@ body {
     cursor: pointer;
 }
 
+.btn-tirar {
+    background-color: #B6B6B6;
+}
+
 .text-btn {
     display: flex;
     flex-direction: row;
@@ -177,6 +181,9 @@ label {
 
 .die-holder {
     background: #B6B6B6;
+    /* background-image: url(../Images/Number=Five.png);
+    background-repeat: no-repeat;
+    background-size: cover; */
     height: 56px;
     width: 56px;
     left: 0px;
@@ -184,9 +191,49 @@ label {
     border-radius: 10px;
 }
 
+.die-stroke {
+    border: 5px solid #EBB652;
+}
+
 .block {
     display: flex;
     justify-content: space-around;
+}
+
+.die_1 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=One.png);
+}
+
+.die_2 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=Two.png);
+}
+
+.die_3 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=Three.png);    
+}
+
+.die_4 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=Four.png);
+}
+
+.die_5 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=Five.png);
+}
+
+.die_6 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../Images/Number=Six.png);
 }
 
 .points-total {
