--- a/css/css-algoritmos.css
+++ b/css/css-algoritmos.css
@@ -51,7 +51,7 @@ body {
     flex-grow: 1;
     text-align: center;
     line-height: 60px;
-    border: solid 1px rgba(4, 51, 78, .6);
+    border: solid 1px var(--bg-body);
     border-radius: 5px;
     color: #3A3A3A;
     cursor: pointer;
@@ -98,4 +98,54 @@ body {
     letter-spacing: 1px;
     font-family: "Roboto";
     font-style: normal;
+}
+
+.form-group {
+    position: relative;  
+    width: 90%;
+}
+  
+/* .form-group + .form-group {
+    margin-top: 30px;
+} */
+
+.form-label {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  color: #000;
+  background-color: var(--bg-active);
+  z-index: 10;
+  transition: transform 150ms ease-out, font-size 150ms ease-out;
+}
+
+.focused .form-label {
+  transform: translateY(-125%);
+  font-size: .75em;
+}
+
+.form-input {
+    position: relative;
+    padding: 12px 0px 5px 0;
+    width: 100%;
+    outline: 0;
+    border: 0;
+    background-color: var(--bg-active);
+    box-shadow: 0 2px 0 0 #000;
+    transition: box-shadow 150ms ease-out;
+  }
+  
+.form-input:focus {
+    box-shadow: 0 2px 0 0 blue;  
+}
+  
+
+.form-input.filled {
+  box-shadow: 0 2px 0 0 blue;
+}
+
+.inputs-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
