--- a/css/css.css
+++ b/css/css.css
@@ -21,9 +21,10 @@ body {
 
 .container {
     padding-top: 60px;
+    padding-bottom: 60px;
     margin: 50px auto;
     width: 432px;
-    height: 700px;
+    height: auto;
     background: #E1E1E1;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
@@ -50,6 +51,24 @@ body {
     top: 366px;
 }
 
+.btn-numeros {
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 279px;
+    height: auto;
+    background: #EBB652;
+    color: #fff;
+    font-size: 36px;
+    font-family: "Roboto";
+    font-style: normal;
+    border-radius: 10px;
+    border-style: none;
+    cursor: pointer;
+    padding: 22px;
+}
+
 .container .btn-play, .btn-simulate {
     display: block;
     margin: 0 auto;
@@ -57,7 +76,7 @@ body {
     padding: 22px 0px;
     gap: 10px;
     width: 279px;
-    height: 86px;
+    height: auto;
     background: #EBB652;
     color: #fff;
     font-size: 36px;
@@ -145,11 +164,11 @@ p {
     margin-top: 35px;
 }
 
-.container .btn-play:hover, .btn-simulate:hover {
+.container .btn-play:hover, .btn-simulate:hover, .btn-numeros:hover {
     background-color: #F5DAA9;
 }
 
-.container .btn-play:active, .btn-simulate:active {
+.container .btn-play:active, .btn-simulate:active, .btn-numeros:active {
     background-color: #EBB652;
 }
 
