--- a/css/css-algoritmos.css
+++ b/css/css-algoritmos.css
@@ -86,7 +86,6 @@ body {
 .content h3 {
     text-align: center;
     padding-bottom:  10px;
-    border-bottom: solid 1px rgba(255, 255, 255, .3);
     font-family: "Roboto";
     font-style: normal;
     letter-spacing: 2px;
@@ -102,7 +101,7 @@ body {
 
 .form-group {
     position: relative;  
-    width: 90%;
+    width: 100%;
 }
   
 /* .form-group + .form-group {
@@ -148,6 +147,7 @@ body {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    margin-top: 20px;
 }
 
 .limiter {
@@ -258,4 +258,21 @@ tbody tr:hover {
 
 .column3 {
     width: 245px
+}
+
+.btn {
+    color: #fff;
+    border: none;
+    background-color: #0B2E59;
+    padding: 20px 10px;
+    margin: auto;
+    margin-top: 20px;
+    border-radius: 5px;
+    display: block;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #2d68af;
 }
