--- a/css/css-algoritmos.css
+++ b/css/css-algoritmos.css
@@ -276,3 +276,18 @@ tbody tr:hover {
 .btn:hover {
     background-color: #2d68af;
 }
+
+.combobox {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+    outline: none;
+}
+
+option:hover {
+    background-color: #2d68af;
+}
