--- a/css/css-algoritmos.css
+++ b/css/css-algoritmos.css
@@ -284,3 +284,54 @@ tbody tr:hover {
 option:hover {
     background-color: #2d68af;
 }
+
+.menu {
+    padding: 10px 10px;
+    width: 130px;
+    background-color: #EBB652;
+    color: #FFF;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.img-btn {
+    margin-right: 15px;
+    height: 24px;
+}
+
+.menu:hover {
+    background-color: #F5DAA9;;
+}
+
+.menu:active {
+    background-color: #EBB652;
+}
+
+.text-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-inicio {
+    display: flex;
+    justify-content: end;
+    width: 80%;
+    flex-direction: row;
+}
