--- a/css/css.css
+++ b/css/css.css
@@ -108,6 +108,10 @@ body {
     background-color: #4CAF50;
 }
 
+.btn-red {
+    background-color: #F44336;
+}
+
 .btn-tirar {
     background-color: #B6B6B6;
 }
@@ -142,6 +146,14 @@ p {
 
 .btn-green:active {
     background-color: #4CAF50;
+}
+
+.btn-red:hover {
+    background-color: #F77268;
+}
+
+.btn-red:active {
+    background-color: #F44336;
 }
 
 .btn-stats:hover {
@@ -334,4 +346,132 @@ label {
 .block-selected {
     background-color: #7DCCEE;
     color: #FFF;
+}
+
+.modal {
+    background-color: #E1E1E1;
+    border: none;
+    border-radius: 10px;
+    width: 350px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    padding: 50px 10px;
+}
+
+.modal h1 {
+    margin: auto;
+    font-weight: 400;
+    font-size: 48px;
+    text-align: center;
+    color: #3A3A3A;
+}
+
+.modal::backdrop {
+    background-color: rgba(255, 255, 255, .50);
+}
+
+.modal-btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.modal-btns Button {
+    width: 70%;
+    margin: 15px 0px;
+}
+
+.modal-btns .text-btn {
+    display: flex;
+    flex-direction: wrap;
+    justify-content: space-between;
+}
+
+.modal-simulate {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 95%;
+    height: 90vh;
+    z-index: 9999;
+    padding: 20px;
+}
+
+.modal-simulate .title-container {
+    display: flex;
+    justify-content: space-between;     
+}
+
+.modal-simulate .title-container button {
+    font-size: 48px;
+    background-color: #E1E1E1;
+    border: none;
+}
+
+.modal-simulate h1 {
+    text-align: left;
+}
+
+.modal-simulate label {
+    font-size: 24px;
+}
+
+.modal-simulate .form-control {
+    background-color: #B6B6B6;
+    border: none;
+    border-radius: 5px;
+    height: 30px;
+    width: 300px;
+    padding: 5px 10px;
+    font-size: 18px;
+}
+
+.modal-simulate .estrategia-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 50px;
+    margin-top: 30px;
+    height: 450px;
+    font-size: 24px;
+}
+
+.modal-simulate .estrategia-container .col-1, .col-2 {
+    width: 100%;
+    height: 80%;
+    background-color: #B6B6B6;
+    border-radius: 10px;
+}
+
+.modal-simulate .estrategia-container .col-2-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: end;
+    gap: 10px;
+    height: 70%;
+}
+
+.modal-simulate .estrategia-container .btn-estrategia {
+    width: 100%;
+    text-align: left;
+    background-color: #B6B6B6;
+    border: none;
+    font-size: 16px;
+    padding: 10px;
+    margin: 5px 0px;
+}
+
+.modal-simulate .estrategia-container .btn-activo {
+    background-color: #9DD9F2;
+}
+
+.juegos-label {
+    display: flex;
+    text-align: right;
+    flex-direction: column;
+    color: #FFF;
+    font-size: 24px;
+    margin-top: 20px;
 }
